2002-01-14  Hasbullah Bin Pit  <sebol@ikhlas.com>

        * configure.in: Added ms at ALL_LINGUAS.
	* po/ms.po: Added Malay Translation.

2002-01-14  Matthias Clasen  <matthiasc@poet.de>

	* gtk/gtkitemfactory.c: Documentation.

2002-01-13  Sven Neumann  <sven@gimp.org>

	* gdk/gdkwindow.c: documentation cleanups.

Sun Jan 13 01:15:45 2002  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreemodelsort.c: various cleanups,
	(get_child_iter_from_elt): removed,
	(gtk_tree_model_sort_elt_get_path): rewritten to be a lot cleaner
	and especially faster,
	(gtk_tree_model_convert_iter_to_child_iter): use
	gtk_tree_model_sort_elt_get_path

Sat Jan 12 16:57:31 2002  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreeview.c (gtk_tree_view_real_start_interactive_search):
	revert Owen's change (using a strdupped string as object data), so
	the interactive search works again

2002-01-11  Havoc Pennington  <hp@pobox.com>

	* gtk/gtklabel.c: put in more links to Pango markup format docs
	(gtk_label_set_justify): mention gtk_misc_set_alignment

2002-01-12  Tor Lillqvist  <tml@iki.fi>

	Fixes contributed by Archaeopteryx Software: This is a first small
	part of their changes. Will commit more later.
	
	* gdk/win32/*.c: Add some more checks for failed GDI calls. If a
	call fails, don't use bogus values.

	 gdk/win32/gdkcursor-win32.c (_gdk_win32_data_to_wcursor): Plug
	memory leak: g_free() the AND and XOR bitmaps after use.
	(_gdk_cursor_destroy): If we are destroying the current Windows
	cursor, set the Windows cursor to none first.

	* gdk/win32/gdkgc-win32.c (predraw_set_foreground): Delete the old
	brush that was in the DC, like the win32-procution branch does. I
	guess this plugs a resource leak? With the HDC cache, the old
	brush might be something we created ourselves, and not a stock
	brush. And it doesn't do any harm to call DeleteObject on stock
	brushes.

	* gdk/win32/gdkwindow-win32.c (gdk_window_impl_win32_finalize): If